--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.kruase</groupId>
     <artifactId>lingering-potion-crafting</artifactId>
-    <version>0.0</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>LingeringPotionCrafting</name>
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <kotlin.version>2.0.0</kotlin.version>
-        <mcApi.version>1.16</mcApi.version>
+        <mcApi.version>1.20</mcApi.version>
     </properties>
 
     <build>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>${mcApi.version}.1-R0.1-SNAPSHOT</version>
+            <version>1.20.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>de.tr7zw</groupId>
             <artifactId>item-nbt-api-plugin</artifactId>
-            <version>2.13.0</version>
+            <version>2.13.1</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
