--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,13 +1,21 @@
-# time (in seconds) after which since the first craft the area_effect_cloud entity would disappear
-cloud-lifetime: 10
+# max cloud radius in blocks that would gradually decrease with each craft
+cloud-initial-radius: 3.0
+
+# time (in seconds) after which since the last craft the area_effect_cloud entity would disappear
+cloud-lifetime: 15
+
+# once per how many ticks the area_effect_cloud entity would try to perform crafts (higher value -> less lag)
+craft-periodicity-ticks: 4
 
 messages: # Can be used to add translation
     info: # To turn off certain messages leave the field empty (not empty quotes!)
+        config-loaded: Config loaded!
 
     error:
         no-permission: Not enough permissions to call this command!
         invalid-command: Invalid command!
         player-only: This command can only be called by a player!
+        unable-to-drop-item: Unable to drop an item! Is the location unloaded?
 
     help: # Not intended to be edited (unless adding translation)
         header: §7-------- §6[§LingeringPotionCrafting§6] §7--------------------------
