--- a/src/main/resources/recipes.yml
+++ b/src/main/resources/recipes.yml
@@ -1,13 +1,48 @@
-# example recipe
-"invisible item frame":
+# example recipe #1
+invisible_item_frame: # don't use spaces in the recipe name, this would cause problems while calling commands
     enabled: false
-    effect: invisibility # as in /effect command
+    effects: # ids from https://hub.spigotmc.org/javadocs/spigot/org/bukkit/potion/PotionType.html#enum-constant-summary
+        - invisibility # regular invisibility
+        - long_invisibility # "long_" - extended with redstone, "strong_" = upgraded with glowstone
     usages: 16 # how many times the recipe can be applied per area_effect_cloud
-    components:
+    components: # can be as many as you want (just continue the list using dashes)
         -   id: minecraft:item_frame
             amount: 1
-            nbt: "{}"
+            nbt: '{}' # should be wrapped in '' to be read properly by plugin; avoid using '' inside nbt or escape them
     result:
         id: minecraft:item_frame
         amount: 1
-        nbt: "{EntityTag:{Invisible:1}}"
+        nbt: '{EntityTag:{Invisible:1b},display:{Name:"{\"text\":\"Invisible item frame\",\"color\":\"light_purple\",\"italic\":false}"},Enchantments:[{}]}'
+
+# example recipe #2
+resistance_potion:
+    enabled: false
+    effects:
+        - strong_swiftness
+    usages: 4
+    components:
+        -   id: minecraft:potion
+            amount: 1
+            nbt: '{Potion:"minecraft:long_turtle_master"}'
+    result:
+        id: minecraft:potion
+        amount: 1
+        nbt: '{custom_potion_effects:[{id:resistance,duration:1200}],display:{Name:"{\"text\":\"Resistance potion\",\"italic\":false}"}}'
+
+# example recipe #3
+enchanted_golden_apple:
+    enabled: false
+    effects:
+        - strong_turtle_master
+    usages: 1
+    components:
+        -   id: minecraft:golden_apple
+            amount: 1
+            nbt: '{}'
+        -   id: minecraft:gold_block
+            amount: 8
+            nbt: '{}'
+    result:
+        id: minecraft:enchanted_golden_apple
+        amount: 1
+        nbt: '{}'
